Thu Aug 20 19:48:56 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/token.c src/tds/types.pl:
	- use iconv on variant

Thu Aug 20 17:14:29 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix describecol test

Wed Aug 19 13:48:28 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c src/tds/token.c: handle variant data

Wed Aug 19 11:51:14 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: small improve

Tue Aug 18 17:11:07 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/tds_checks.c src/tds/token.c misc/types.txt:
	* src/odbc/odbc_util.c:
	- improve ms xml support

Tue Aug 18 17:07:18 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix silly error

Tue Aug 18 17:04:42 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: small fix for empty strings

Tue Aug 18 14:23:46 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild:
	- remove 0.64 support
	- reuse a new function

Tue Aug 18 13:09:13 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: fix empty string binding for Sybase

Tue Aug 18 09:27:03 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/tds_checks.c:
	- remove too strict test (fails for Sybase LONGCHAR)

Mon Aug 17 18:52:20 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: applied David Wood patch for Sybase host process

Fri Aug 14 15:53:01 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac:
	- use pkg-config instead of libgnutls-config if possible

Fri Jul 24 17:06:23 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix Sybase LONGCHAR/LONGBINARY

Thu Jul 23 20:21:50 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/apps/freebcp.h:
	- support setting charset in freebcp
