@@ -1,3 +1,6 @@
+Thu Aug 20 19:49:45 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/read.c: small tds_get_n improve
+
 Thu Aug 20 19:48:56 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/tds/data.c src/tds/token.c src/tds/types.pl:
 	- use iconv on variant
@@ -1751,4 +1754,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2848 2009-08-20 17:49:07 freddy77 Exp $
+$Id: ChangeLog,v 1.2849 2009-08-20 17:50:05 freddy77 Exp $
